# coven-pocket

./: .gitignore  .swiftlint.yml  AGENTS.md  README.md  ROADMAP.md  project.yml
.beads/: config.yaml  interactions.jsonl  issues.jsonl  metadata.json
.github/workflows/: ci.yml
app/Sources/: CovenPocketApp.swift
app/Sources/Diff/: DiffModel.swift  DiffPatchBuilder.swift  DiffReviewModel.swift  DiffSamples.swift  SideBySidePairing.swift  UnifiedDiffParser+Builders.swift  UnifiedDiffParser.swift
app/Sources/Intents/: CovenIntents.swift
app/Sources/Support/: AppRouter.swift  ChatBridge.swift  ChatModel.swift  ChatTypes.swift  CompanionModel.swift  EngineClient.swift  GistShareModel.swift  Keychain.swift  MemoryModel.swift  RemoteSessionModels.swift  RemoteTranscript.swift  RepoModel.swift  SessionExport.swift  SessionSpotlight.swift
app/Sources/Views/: ApprovalSheet.swift  ChatSettingsView.swift  ChatView.swift  CompanionView.swift  ContextPane.swift  DiffDemoView.swift  DiffLineRows.swift  DiffReviewView.swift  MemoryView.swift  PairingSheet.swift  RemoteSessionView.swift  RemoteSessionsView.swift  RepoSheets.swift  ReposView.swift  RootView.swift  SafariView.swift  SessionsView.swift  ShareSessionSheet.swift  SpikeView.swift
app/Tests/: AppIntentsTests.swift  ChatSurfaceTests.swift  CompanionPairingTests.swift  DiffPatchBuilderTests.swift  DiffReviewTests.swift  EngineSmokeTests.swift  GistShareTests.swift  IPadLayoutTests.swift  MemoryTests.swift  RemoteAttachTests.swift  UnifiedDiffParserTests.swift  WorkspaceSurfaceTests.swift
docs/: LICENSING.md
rust/: Cargo.toml  rust-toolchain.toml
rust/bindgen/: Cargo.toml
rust/ffi/: Cargo.toml
rust/ffi/src/: chat.rs  codex_auth.rs  daemon.rs  git.rs  lib.rs  memory.rs  remote.rs  sessions.rs  share.rs
scripts/: build-xcframework.sh
