[package]
name = "coven-pocket-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "coven_pocket_ffi"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
claurst-core = { workspace = true }
claurst-api = { workspace = true }
claurst-query = { workspace = true }
claurst-tools = { workspace = true }
uniffi = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7"
futures = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
parking_lot = "0.12"
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
# Kept in lockstep with the engine workspace (coven-code src-rust/Cargo.toml)
# so cargo unifies on one copy.
reqwest = { version = "0.13", features = ["json", "form"], default-features = false }
urlencoding = "2"
git2 = "0.21.0"

[dev-dependencies]
tokio = { version = "1.44", features = ["rt-multi-thread", "macros"] }
